Ejercicios nuevos del 71 al 74

--- a/Ejercicio071.html
+++ b/Ejercicio071.html
@@ -34,7 +34,7 @@
     return "Yes";<br>
     Combina las dos sentencias if en una sola sentencia que devuelva la cadena Outside si val no está entre 10 y 20, inclusivo. <br>
     De lo contrario, devuelve la cadena Inside.<br>
-    <pre>
+    <pre class="codigoFalso">
         Código original.
     function testLogicalOr(val) {
         // Cambia solo el código debajo de esta línea
@@ -52,6 +52,7 @@
         }
         
         testLogicalOr(15);
+    </pre>
     <pre>
         Código resuelto
         function testLogicalOr(val) {
